<resources>
    <string name="app_name">My Application</string>
    <string name="textExplorer">Explorer</string>
    <string name="textMyCart">My Cart</string>
    <string name="textFavourites">Favourites</string>
    <string name="textProfile">Profile</string>
    <string name="textFilter">filter</string>
    <string name="textHomeToolbarTitle">Zihuatanejo, Gro</string>
    <string name="textSelectCategory">Select Category</string>
    <string name="textViewAll">view all</string>
    <string name="textPhones">Phones</string>
    <string name="textComputer">Computer</string>
    <string name="textHealth">Health</string>
    <string name="textBooks">Books</string>
    <string name="textAutoProducts">Auto products</string>
    <string name="textHotSales">Hot sales</string>
    <string name="textSeeMore">see more</string>
    <string name="textBestSeller">Best Seller</string>
    <string name="textNew">New</string>
    <string name="text_button_buy_now">Buy now!</string>
    <string name="textFilterOptions">Filter options</string>
    <string name="textDone">Done</string>
    <string name="textBrand">Brand</string>
    <string name="textChoiceBrand">Choice brand</string>
    <string name="textPrice">Price</string>
    <string name="textSize">Size</string>
    <string name="textProductDetails">Product Details</string>
    <string name="textShop">Shop</string>
    <string name="textDetails">Details</string>
    <string name="textFeatures">Features</string>
    <string name="textSelect_color_and_capacity">Select color and capacity</string>
    <string name="sizeMemory">%1$s GB</string>
    <string name="textBtnAdd">"Add to Cart              \$%1$d"</string>
    <string name="textShopBottomNav">Shop</string>
    <string name="textAddAddress">Add address</string>
    <string name="textCheckout">Checkout</string>
    <string name="textDelivery">Delivery</string>
    <string name="textTotal">Total</string>
    <string name="itemGadgetTotalPrice">\$%1$d.00</string>
    <string name="cartTotalPrice">\$%1$d us</string>
    <string name="itemBestSellerPrice">\$%1$d</string>

</resources>