<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppModalStyle"
    android:paddingTop="24dp"
    >

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnDone"
            app:layout_constraintBottom_toBottomOf="@id/btnDone"
            android:background="@drawable/background_close_button"
            android:src="@drawable/ic_close"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFilterOptions"
            android:textColor="@color/deep_blue"
            android:textSize="18sp"
            android:letterSpacing="-0.02"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnDone"
            app:layout_constraintBottom_toBottomOf="@id/btnDone"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/textDone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:letterSpacing="-0.02"
            android:backgroundTint="@color/orange"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvTextBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textBrand"
            android:textColor="@color/deep_blue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:letterSpacing="-0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDone"
            android:layout_marginStart="46dp"
            android:layout_marginTop="44dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTextBrand"
            android:layout_marginTop="8dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="31dp"
            app:boxStrokeColor="@color/spinner_outline"
            app:endIconTint="@color/spinner_outline"
            app:endIconDrawable="@drawable/ic_filters_arrow_down"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/spinnerBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/deep_blue"
                    android:textSize="18sp"
                    android:padding="1dp"
                    android:letterSpacing="-0.02"
                    android:inputType="none"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvTextPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPrice"
            android:textColor="@color/deep_blue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:letterSpacing="-0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilBrand"
            android:layout_marginStart="46dp"
            android:layout_marginTop="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTextPrice"
            android:layout_marginTop="8dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="31dp"
            app:boxStrokeColor="@color/spinner_outline"
            app:endIconTint="@color/spinner_outline"
            app:endIconDrawable="@drawable/ic_filters_arrow_down"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/spinnerPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/deep_blue"
                    android:textSize="18sp"
                    android:letterSpacing="-0.02"
                    android:padding="1dp"
                    android:inputType="none"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSize"
            android:textColor="@color/deep_blue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:letterSpacing="-0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPrice"
            android:layout_marginStart="46dp"
            android:layout_marginTop="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTextSize"
            android:layout_marginTop="8dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="31dp"
            android:paddingBottom="44dp"
            app:boxStrokeColor="@color/spinner_outline"
            app:endIconTint="@color/spinner_outline"
            app:endIconDrawable="@drawable/ic_filters_arrow_down"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/spinnerSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/deep_blue"
                    android:textSize="18sp"
                    android:letterSpacing="-0.02"
                    android:padding="1dp"
                    android:inputType="none"
                    />
        </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>