<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        >
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:layout_marginStart="42dp"
            android:background="@drawable/background_close_button"
            android:src="@drawable/ic_back"
            />

        <ImageButton
            android:id="@+id/btnAddAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_gravity="end"
            android:layout_marginEnd="35dp"
            android:background="@drawable/background_cart_button"
            android:src="@drawable/ic_address_cart"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/textAddAddress"
            android:textStyle="bold"
            android:textSize="15sp"
            android:letterSpacing="-0.02"
            android:layout_marginEnd="9dp"
            android:textColor="@color/deep_blue"
            android:layout_gravity="end"
            >
        </TextView>


    </com.google.android.material.appbar.MaterialToolbar>
</com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textMyCart"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:text="@string/textMyCart"
        android:textColor="@color/deep_blue"
        android:layout_weight="1"
        android:textSize="35sp"
        android:textStyle="bold"
        android:letterSpacing="-0.01"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMyCart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="49dp"
        app:contentPaddingBottom="44dp"
        android:backgroundTint="@color/deep_blue"
        app:cardCornerRadius="30dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCartList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dividerTop"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/item_product_cart"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.77" />

            <View
                android:id="@+id/dividerTop"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="27dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvTextTotal"
                android:background="@color/dividerTop"
                />

            <TextView
                android:id="@+id/tvTextTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="12dp"
                android:text="@string/textTotal"
                android:textSize="15sp"
                android:letterSpacing="-0.02"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvTextDelivery"
                />

            <TextView
                android:id="@+id/tvTextValueTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:letterSpacing="-0.02"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintBottom_toBottomOf="@+id/tvTextTotal"
                tools:text="$6,000 us"
                />

            <TextView
                android:id="@+id/tvTextDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="26dp"
                android:text="@string/textDelivery"
                android:textSize="15sp"
                android:letterSpacing="-0.02"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dividerBottom"
                />

            <TextView
                android:id="@+id/tvTextValueDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:letterSpacing="-0.02"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintBottom_toTopOf="@+id/dividerBottom"
                tools:text="Free"
                />

            <View
                android:id="@+id/dividerBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnCheckout"
                android:background="@color/dividerBottom"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCheckout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="44dp"
                android:paddingTop="14dp"
                android:paddingBottom="15dp"
                android:text="@string/textCheckout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:letterSpacing="-0.02"
                android:backgroundTint="@color/orange"
                app:cornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>