<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            >
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:layout_marginStart="42dp"
                android:background="@drawable/background_close_button"
                android:src="@drawable/ic_back"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/textProductDetails"
                android:textStyle="bold"
                android:textSize="15sp"
                android:letterSpacing="-0.02"
                android:textColor="@color/deep_blue"
                android:layout_gravity="center"
                >
            </TextView>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                >
            <ImageButton
                android:id="@+id/btnCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/background_cart_button"
                android:src="@drawable/ic_cart"
                />
                <TextView
                    android:id="@+id/tvCountProductInCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/deep_blue"
                    tools:text="5"
                    />
            </FrameLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <ImageSwitcher
            android:id="@+id/isHotSales"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivHotSales"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                tools:src="@tools:sample/backgrounds/scenic" />
        </ImageSwitcher>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:contentPaddingBottom="34dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
            android:id="@+id/tvNameProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/deep_blue"
            android:textStyle="bold"
            tools:text="Galaxy Note 20 Ultra"
            android:letterSpacing="-0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="38dp"
            />

            <ImageButton
                android:id="@+id/btnFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:layout_marginEnd="37dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/background_close_button"
                android:src="@drawable/ic_favourites_details"
                />
            <ImageView
                android:id="@+id/ivStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/tvNameProduct"
                app:layout_constraintTop_toBottomOf="@id/tvNameProduct"
                android:src="@drawable/ic_star_full"
                />
            <ImageView
                android:id="@+id/ivStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/tvNameProduct"
                app:layout_constraintTop_toBottomOf="@id/tvNameProduct"
                android:src="@drawable/ic_star_full"
                />
            <ImageView
                android:id="@+id/ivStar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/tvNameProduct"
                app:layout_constraintTop_toBottomOf="@id/tvNameProduct"
                android:src="@drawable/ic_star_full"
                />
            <ImageView
                android:id="@+id/ivStar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="81dp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/tvNameProduct"
                app:layout_constraintTop_toBottomOf="@id/tvNameProduct"
                android:src="@drawable/ic_star_full"
                />
            <ImageView
                android:id="@+id/ivStar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/tvNameProduct"
                app:layout_constraintTop_toBottomOf="@id/tvNameProduct"
                android:src="@drawable/ic_star_full"
                />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:background="@color/white"
                app:tabSelectedTextColor="@color/deep_blue"
                app:tabIndicatorColor="@color/orange"
                app:tabTextAppearance="@style/TabWidgetText"
                app:tabMode="fixed"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameProduct">

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_layout"
                />

            <TextView
                android:id="@+id/textSelect_color_and_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSelect_color_and_capacity"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/deep_blue"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/viewPager"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSelect_color_and_capacity"
                >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <View
                    android:id="@+id/vColor1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_select_category"
                    tools:backgroundTint="#772D03"
                    />
                    <ImageView
                        android:id="@+id/ivChoiceColor1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_choice"
                        />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    >
                <View
                    android:id="@+id/vColor2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_select_category"
                    tools:backgroundTint="#010035"
                    />
                    <ImageView
                        android:id="@+id/ivChoiceColor2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:src="@drawable/ic_choice"
                        />
                </FrameLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMemory1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="58dp"
                    android:backgroundTint="@color/orange"
                    app:cardCornerRadius="10dp"
                    >
                    <TextView
                        android:id="@+id/tvMemory1"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:letterSpacing="-0.03"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="6dp"
                        tools:text="128 GB"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMemory2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="10dp"
                    >
                    <TextView
                        android:id="@+id/tvMemory2"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/size_memory"
                        android:textStyle="bold"
                        android:letterSpacing="-0.03"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="6dp"
                        tools:text="256 GB"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="81dp"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="30dp"
                android:text="@string/textBtnAdd"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:letterSpacing="-0.02"
                android:backgroundTint="@color/orange"
                app:cornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSelect_color_and_capacity"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>